{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 43,
  "lineage": "77c7e01f-3926-5c7e-2ff5-dfaac97598d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_elastic_ip_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099f5677e66afb09d",
            "association_id": "eipassoc-0d2f8fcceef808bcb",
            "domain": "vpc",
            "id": "eipalloc-099f5677e66afb09d",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0623f5b25dfec858c",
            "private_dns": "ip-10-0-1-111.eu-west-1.compute.internal",
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-54-74-77-126.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.77.126",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_elastic_ip_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087b414c5fcb88cbb",
            "association_id": "eipassoc-09e394c56a582d732",
            "domain": "vpc",
            "id": "eipalloc-087b414c5fcb88cbb",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0e69fb6b198aa37de",
            "private_dns": "ip-10-0-2-81.eu-west-1.compute.internal",
            "private_ip": "10.0.2.81",
            "public_dns": "ec2-176-34-179-214.eu-west-1.compute.amazonaws.com",
            "public_ip": "176.34.179.214",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:internet-gateway/igw-03b20e8d806578124",
            "id": "igw-03b20e8d806578124",
            "owner_id": "411194033911",
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-load-balancer/4983b64c25178b34",
            "arn_suffix": "app/my-load-balancer/4983b64c25178b34",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-load-balancer-2046955029.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-load-balancer/4983b64c25178b34",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e2bd745aad093d3b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bed0fa51f4ab198"
              },
              {
                "subnet_id": "subnet-0cf44eda352728395"
              }
            ],
            "subnets": [
              "subnet-00bed0fa51f4ab198",
              "subnet-0cf44eda352728395"
            ],
            "tags": {
              "name": "load-balancer"
            },
            "tags_all": {
              "name": "load-balancer"
            },
            "vpc_id": "vpc-023736f43ef9bd648",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.my_public_subnet_01",
            "aws_subnet.my_public_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:listener/app/my-load-balancer/4983b64c25178b34/33968099cd3b5076",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-alb-target-groups/dc94b7bfc9862868",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:listener/app/my-load-balancer/4983b64c25178b34/33968099cd3b5076",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-load-balancer/4983b64c25178b34",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "name": "listener"
            },
            "tags_all": {
              "name": "listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_load_balancer",
            "aws_lb_target_group.my_alb_target_group",
            "aws_security_group.allow_http",
            "aws_subnet.my_public_subnet_01",
            "aws_subnet.my_public_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-alb-target-groups/dc94b7bfc9862868",
            "arn_suffix": "targetgroup/my-alb-target-groups/dc94b7bfc9862868",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-alb-target-groups/dc94b7bfc9862868",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-alb-target-groups",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099f5677e66afb09d",
            "association_id": "eipassoc-0d2f8fcceef808bcb",
            "connectivity_type": "public",
            "id": "nat-0731546594aaf1756",
            "network_interface_id": "eni-0623f5b25dfec858c",
            "private_ip": "10.0.1.111",
            "public_ip": "54.74.77.126",
            "subnet_id": "subnet-00bed0fa51f4ab198"
          },
          "dependencies": [
            "aws_eip.my_elastic_ip_01",
            "aws_subnet.my_public_subnet_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087b414c5fcb88cbb",
            "association_id": "eipassoc-09e394c56a582d732",
            "connectivity_type": "public",
            "id": "nat-0038a854b42b03c89",
            "network_interface_id": "eni-0e69fb6b198aa37de",
            "private_ip": "10.0.2.81",
            "public_ip": "176.34.179.214",
            "subnet_id": "subnet-0cf44eda352728395"
          },
          "dependencies": [
            "aws_eip.my_elastic_ip_02",
            "aws_subnet.my_public_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-09e8a1040fb6892c7",
            "id": "rtb-09e8a1040fb6892c7",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b20e8d806578124",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0f63cac3e438a403e",
            "id": "rtb-0f63cac3e438a403e",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0731546594aaf1756",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_elastic_ip_01",
            "aws_nat_gateway.my_nat_01",
            "aws_subnet.my_public_subnet_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0d1e144e3528c1121",
            "id": "rtb-0d1e144e3528c1121",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b20e8d806578124",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0f532986321c3ae73",
            "id": "rtb-0f532986321c3ae73",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0038a854b42b03c89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_elastic_ip_02",
            "aws_nat_gateway.my_nat_02",
            "aws_subnet.my_public_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac7669823960a212",
            "route_table_id": "rtb-09e8a1040fb6892c7",
            "subnet_id": "subnet-00bed0fa51f4ab198"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw_01",
            "aws_route_table.my_route_table_01",
            "aws_subnet.my_public_subnet_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d0553ee813320e",
            "route_table_id": "rtb-0f63cac3e438a403e",
            "subnet_id": "subnet-0647f9100eb66b790"
          },
          "dependencies": [
            "aws_eip.my_elastic_ip_01",
            "aws_nat_gateway.my_nat_01",
            "aws_route_table.my_route_table_02",
            "aws_subnet.my_private_subnet_01",
            "aws_subnet.my_public_subnet_01",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d26507ae99fcf1f9",
            "route_table_id": "rtb-0d1e144e3528c1121",
            "subnet_id": "subnet-0cf44eda352728395"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw_01",
            "aws_route_table.my_route_table_03",
            "aws_subnet.my_public_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc_04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060e4e50769313513",
            "route_table_id": "rtb-0f532986321c3ae73",
            "subnet_id": "subnet-0ba93a76753354544"
          },
          "dependencies": [
            "aws_eip.my_elastic_ip_02",
            "aws_nat_gateway.my_nat_02",
            "aws_route_table.my_route_table_04",
            "aws_subnet.my_private_subnet_02",
            "aws_subnet.my_public_subnet_02",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-0e2bd745aad093d3b",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2bd745aad093d3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_sec1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-08fc2038c8a1c3a0f",
            "description": "Allow HTTP inbound traffic to load",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fc2038c8a1c3a0f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from http_sec_group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2bd745aad093d3b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_sec1",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-0647f9100eb66b790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0647f9100eb66b790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private"
            },
            "tags_all": {
              "name": "private"
            },
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-0ba93a76753354544",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba93a76753354544",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private"
            },
            "tags_all": {
              "name": "private"
            },
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-00bed0fa51f4ab198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bed0fa51f4ab198",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public-subnet"
            },
            "tags_all": {
              "name": "public-subnet"
            },
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-0cf44eda352728395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf44eda352728395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public--subnet"
            },
            "tags_all": {
              "name": "public--subnet"
            },
            "vpc_id": "vpc-023736f43ef9bd648"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:vpc/vpc-023736f43ef9bd648",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0533991c371442c55",
            "default_route_table_id": "rtb-04f4e44cb747bb71a",
            "default_security_group_id": "sg-03d2c5bda52b91d60",
            "dhcp_options_id": "dopt-0a1b2f3f6a4cd231f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023736f43ef9bd648",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f4e44cb747bb71a",
            "owner_id": "411194033911"
          }
        }
      ]
    }
  ]
}